<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtOpgave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opgave"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtVraag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vraag"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edtAntwoord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/btnVolgende"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnVolgendeClick"
            android:text="@string/ok"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtOplossingTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oplossing"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtVorigVraag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vorige_vraag"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtOplossing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imgGoedFout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_good" />

        <Button
            android:id="@+id/btnGoedkeuren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnGoedkeurenClick"
            android:text="@string/goedkeuren"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imgScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_good" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />

</LinearLayout>